internal/xds/translator/testdata/out/xds-ir/merge-backends-mixed-merge-weighted.routes.yaml
- ignorePortInHostMatching: true
  name: envoy-gateway/gateway-1/http
  virtualHosts:
  - domains:
    - '*'
    metadata:
      filterMetadata:
        envoy-gateway:
          resources:
          - kind: Gateway
            name: gateway-1
            namespace: envoy-gateway
            sectionName: http
    name: envoy-gateway/gateway-1/http/*
    routes:
    - match:
        pathSeparatedPrefix: /mixed
      metadata:
        filterMetadata:
          envoy-gateway:
            resources:
            - kind: HTTPRoute
              name: http-route-mixed
              namespace: default
      name: httproute/default/http-route-mixed/rule/0/match/0/*
      route:
        clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
        upgradeConfigs:
        - upgradeType: websocket
        weightedClusters:
          clusters:
          - name: httproute/default/http-route-mixed/rule/0/backend/1
            requestHeadersToAdd:
            - header:
                key: x-foo
                value: bar
            weight: 50
          - name: service/default/service-1/8080/http
            weight: 50
    - match:
        pathSeparatedPrefix: /solo
      metadata:
        filterMetadata:
          envoy-gateway:
            resources:
            - kind: HTTPRoute
              name: http-route-solo
              namespace: default
      name: httproute/default/http-route-solo/rule/0/match/0/*
      route:
        cluster: service/default/service-1/8080/http
        upgradeConfigs:
        - upgradeType: websocket
